# project11b-backend-svobodnaya

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci-cd.yml  pages.yml
app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
app/routers/: auth.py  projects.py  tasks.py  users.py
docs/: index.html  openapi.yaml
tests/: conftest.py  test_auth.py  test_healthcheck.py  test_projects.py  test_tasks.py  test_users.py
